# cadmus

./: .gitignore  CMakeLists.txt  README.md  legal.txt  license.txt
include/: coh_block.h  cube.h  cubical_filtration.h  field.h  filtration.h  hash_combine.h  logger.h  matrix.h  matrix_with_values.h  messages.h  profile.h  simplex.h  types.h  values_only_matrix.h
scripts/: gen_sl_lrc.py  gen_sl_perl.py
src/: CMakeLists.txt  coh_block.cpp  cube.cpp  cubical_filtration.cpp  filtration.cpp  lower_star.cpp  main.cpp  matrix.cpp  matrix_with_values.cpp  messages.cpp  simplex.cpp  types.cpp  values_only_matrix.cpp
tests/: CMakeLists.txt  check_dgm.py  check_dgm_2.py  test.cpp
